# c-review

./: .gitignore  CMakeLists.txt  count_utf8.c  count_utf8_plot.gp  linked_list_quiz.c  linked_list_quiz2.c  linked_list_quiz2_circular_doubly_linked_list.c  next_pow2.c  next_pow2.s
